# AutoClicker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/app/: app_manager.cpp  app_manager.h
src/auto_clicker/: clicker_manager.cpp  clicker_manager.h
src/loop/: loop_manager.cpp  loop_manager.h
